# FileWizard

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/model/: file.rs  folder.rs  metadata.rs  mod.rs  path_type.rs
backend/src/search/: mod.rs  path_map.rs  search_controller.rs  thread_manager.rs  utils.rs
controllers/: Cargo.toml
controllers/src/: lib.rs
controllers/src/search/: search_controller.rs
controllers/src/serializers/: models.rs
db/: Cargo.toml  file_wizard.db
db/src/: initialization.rs  lib.rs  settings.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/electron/: main.js  preload.js
frontend/react/: index.html
frontend/react/src/: App.jsx  Index.jsx  index.css
frontend/react/src/components/global/: Footer.jsx  Header.jsx
frontend/react/src/components/global/styling/: Header.css
frontend/react/src/components/search/: D3Tree.jsx  SearchContainer.jsx  Taskbar.jsx
frontend/react/src/components/search/styling/: D3Tree.css  SearchContainer.css  Taskbar.css
frontend/react/src/controllers/search/: d3Controller.js  searchContainerController.js  taskbarController.js
frontend/react/src/pages/: Home.jsx  Search.jsx
frontend/react/src/pages/styling/: Search.css
frontend/react/src/utils/: d3Tree.js
ports/: Cargo.toml
ports/src/: lib.rs
ports/src/routers/: mod.rs  router.rs  search_router.rs
src/: main.rs
utils/src/: lib.rs
