[package]
name = "file_wizard_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true }
chrono = "0.4"
utils = { path = "../utils" }

[lib]
name = "file_wizard_backend"
path = "src/lib.rs"