[package]
name = "file_wizard_db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }  # For serialization and deserialization
log = "0.4"               # For logging database operations

utils = { path = "../utils" }